# neural-network

./: .gitignore  .gitmodules  README.md
.github/workflows/: test.yml
docu/: Neural Net description of classes and data structures v2.docx  Neural Net description of classes and data structures.docx  Neural Network Project Documentation (user interface)(2)(1).docx
project/: CMakeLists.txt  Cmakelists.txt  XOR_Data.txt  create_data.py  data.txt  draw.py  neural_net.cpp  neural_net_gpt.cpp  neural_net_testing.cpp
project/data/: network_data.json
project/include/: connection.h  cost_function.h  layer.h  linear_layer.h  net.h  neuron.h
project/include/base/: cost_function.h  net.h
project/include/layers/: linear_layer.h  sigmoid_layer.h  softmax_layer.h  tanh_layer.h
project/include/net1/: neuron1.h
project/py_scripts/: draw.py
project/src/: connection.cpp  cost_function.cpp  layer.cpp  linear_layer.cpp  net.cpp  neural_net.cpp  neural_net_gpt.cpp  neuron.cpp
project/src/layers/: linear_layer.cpp  sigmoid_layer.cpp  softmax_function.cpp  tanh_layer.cpp
project/src/net1/: neuron1.cpp
project/test/: CMakeLists.txt  test_connection.cpp  test_cost_function.cpp  test_layer.cpp  test_neuron.cpp  testtest.cpp
project/training_data/: data.txt  if_1_1_if_0_0_Data.txt  power2_of_data.txt
sources_used/: README.md  src.txt
